# AIAtOnce

./: .gitignore  CMakeLists.txt  README.md  README_en.md
.github/workflows/: ci.yml
src/: AiObj.cpp  AiObj.h  App.cpp  App.h  LanguageStrings.cpp  LanguageStrings.h  MainWindow.cpp  MainWindow.h  Utils.cpp  Utils.h  main.cpp
src/js/: gemini.js  grok.js  perplexity.js  volcengine.js
tools/: apply-clang-format.sh  apply-cppcheck.sh  build-portable-linux.sh  build-portable-windows.bat
